# cpp-starter

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/module1/: module1.cpp  module1.h
test/src/: runAllTests.cpp  test_module1.cpp
